Make arithmetic operations a trait an Num implement them (#159)
* make Num a trait and add support attributes in the Impl

* add Native num implementations

* remove the math operators from prelude.ks

* fix parameteric types serialization for traits

* refactored tests

* fixed prelude module test

* fixed tests

* refactored solve api

* add more parametric unification tests

* remove typeSystem from the solver api

* fixed tests

* create arithmetic operators

* fixed test

* Fixed impl serializer

* fixed finder to find traits in prelude

* update traitFinder to check traits in the prelude module

* remove attributes to the impl, because the impls are like a black boxes

* remove printlns

* fix function name with arity when first argument is Unit

* fix test

* fix test

* update the type checking

* add unification support types

* update parametric unification

* fix test

* add unify parametric type and impl types

* fixed tests

* fixed tests

* add impland fixedtrait substittuion algo

* fixed tests

* Fixed tests

* Fixed tests

* fixed tests

* fixed tests

* fixed tests

* fixed tests