@@ -19,6 +19,20 @@ dependencies {
     testImplementation(libs.kotest)
 }
 
+//--add-exports
+//org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED
+//--add-exports
+//org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED
+//--add-exports
+//org.graalvm.truffle/com.oracle.truffle.api.strings=ALL-UNNAMED
+//--add-exports
+//org.graalvm.truffle/com.oracle.truffle.api.staticobject=ALL-UNNAMED
+//--add-exports
+//org.graalvm.truffle/com.oracle.truffle.api.dsl=ALL-UNNAMED
+//--add-exports
+//org.graalvm.truffle/com.oracle.truffle.api.frame=ALL-UNNAMED
+//--add-exports
+//org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED
 
 tasks {
     withType<Test> {
